WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173445
[iOS WK2] YouTube videos flash at the wrong place at the end of rotation
https://bugs.webkit.org/show_bug.cgi?id=173445
Summary
[iOS WK2] YouTube videos flash at the wrong place at the end of rotation
Simon Fraser (smfr)
Reported
2017-06-15 16:29:27 PDT
[1;2C[iOS WK2] YouTube videos flash at the wrong place at the end of rotation
Attachments
Patch
(5.60 KB, patch)
2017-06-15 16:32 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(5.59 KB, patch)
2017-06-15 16:34 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-06-15 16:32:48 PDT
Created
attachment 313022
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-06-15 16:33:41 PDT
rdar://problem/31584852
Simon Fraser (smfr)
Comment 3
2017-06-15 16:34:58 PDT
Created
attachment 313023
[details]
Patch
Simon Fraser (smfr)
Comment 4
2017-06-15 18:43:51 PDT
https://trac.webkit.org/r218374
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug